<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottomlinear"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:id="@+id/btn_shouye"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/shouye"
            android:textColor="@color/text_choose"
            />
        <TextView
            android:id="@+id/btn_weather"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/weather"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/btn_mine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/mine"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cursorarea"
        android:layout_width="fill_parent"
        android:background="@color/line_gray"
        android:orientation="horizontal"
        android:layout_height="2dp">
        <ImageView
            android:id="@+id/cursor_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </ImageView>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/myviewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="12">
    </android.support.v4.view.ViewPager>



</LinearLayout>
