<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/dialog_corner_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/moving_target"
            android:textColor="#000000"
            android:textSize="18sp" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:background="@color/line_gray" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:paddingBottom="10dip"
            android:paddingTop="10dip">

            <!--<View-->
                <!--android:layout_width="0dip"-->
                <!--android:layout_height="0dip"-->
                <!--android:layout_weight="1" />-->

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.example.dzj.mogemap.dialog.picker.LoopView
                    android:id="@+id/loop_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dip"
                    android:textColor="#B3B3B3" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.example.dzj.mogemap.dialog.picker.LoopView
                    android:id="@+id/loop_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dip"
                    android:textColor="#B3B3B3" />
            </FrameLayout>

            <!--<View-->
                <!--android:layout_width="0dip"-->
                <!--android:layout_height="0dip"-->
                <!--android:layout_weight="1" />-->
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dip"
            android:background="#A5A5A5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dip"
            android:background="#A5A5A5" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/dialog_corner_bottom"
        android:paddingBottom="10dp"
        >
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/cancel"
            android:textColor="@color/text_choose"
            android:background="@drawable/button_corner"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/submit"
            android:textColor="@color/text_choose"
            android:background="@drawable/button_corner"/>
    </LinearLayout>
</LinearLayout>