<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="5dp"-->
            <!--android:background="@dimen/deviding_height"/>-->
        <LinearLayout
            android:id="@+id/mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/mine_manager_left"
                android:paddingBottom="@dimen/mine_manager_bottom"
                android:paddingTop="@dimen/mine_manager_top"
                android:paddingRight="10dp">
                <com.example.dzj.mogemap.view.RoundImageView
                    android:id="@+id/head_picture"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/head_defualt"
                    app:type="circle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/username_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defualt_username"
                    android:textSize="20dp"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/qq"
                    android:layout_width="@dimen/login_icon_size"
                    android:layout_height="@dimen/login_icon_size"
                    android:src="@drawable/qq"
                    android:layout_marginLeft="15dp"/>
                <ImageView
                    android:id="@+id/xinlang"
                    android:layout_width="@dimen/login_icon_size"
                    android:layout_height="@dimen/login_icon_size"
                    android:src="@drawable/xinlang"
                    android:layout_marginLeft="15dp"/>
                <LinearLayout
                    android:id="@+id/right_arrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"
                    android:gravity="right|center_vertical"
                    android:visibility="gone">
                    <ImageView
                        android:src="@drawable/arrow_right"
                        android:layout_width="@dimen/right_arrow_size"
                        android:layout_height="@dimen/right_arrow_size"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
        <LinearLayout
            android:id="@+id/ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/mine_manager_left"
            android:paddingBottom="@dimen/mine_manager_bottom"
            android:paddingTop="@dimen/mine_manager_top"
            android:paddingRight="@dimen/mine_manager_right"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ranking"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:textSize="@dimen/login_item_text_size"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <ImageView
                    android:layout_width="@dimen/right_arrow_size"
                    android:layout_height="@dimen/right_arrow_size"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
        <LinearLayout
            android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/mine_manager_left"
            android:paddingBottom="@dimen/mine_manager_bottom"
            android:paddingTop="@dimen/mine_manager_top"
            android:paddingRight="@dimen/mine_manager_right"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/friends"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myfriends"
                android:textSize="@dimen/login_item_text_size"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <ImageView
                    android:layout_width="@dimen/right_arrow_size"
                    android:layout_height="@dimen/right_arrow_size"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
        <LinearLayout
            android:id="@+id/statistics_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/mine_manager_left"
            android:paddingBottom="@dimen/mine_manager_bottom"
            android:paddingTop="@dimen/mine_manager_top"
            android:paddingRight="@dimen/mine_manager_right"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/statistics_week"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_week"
                android:textSize="@dimen/login_item_text_size"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <ImageView
                    android:layout_width="@dimen/right_arrow_size"
                    android:layout_height="@dimen/right_arrow_size"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
        <LinearLayout
            android:id="@+id/statistics_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/mine_manager_left"
            android:paddingBottom="@dimen/mine_manager_bottom"
            android:paddingTop="@dimen/mine_manager_top"
            android:paddingRight="@dimen/mine_manager_right"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/statistics_month"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_month"
                android:textSize="@dimen/login_item_text_size"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <ImageView
                    android:layout_width="@dimen/right_arrow_size"
                    android:layout_height="@dimen/right_arrow_size"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/deviding_height"
            android:background="@color/deviding"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/mine_manager_left"
            android:paddingBottom="@dimen/mine_manager_bottom"
            android:paddingTop="@dimen/mine_manager_top"
            android:paddingRight="@dimen/mine_manager_right"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textSize="@dimen/login_item_text_size"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>